[gd_scene load_steps=19 format=2]

[ext_resource path="res://Fonts/SmallTextFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/MenuButtonFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/NumberFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://Fonts/VerySmallTextFont.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1280 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Intro" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1280 )

[node name="Title" type="Label" parent="Intro"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 50.0
margin_right = 360.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 2520, 249 )
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Past Infinity"
align = 1
valign = 1

[node name="Intro" type="Label" parent="Intro"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 300.0
margin_right = 360.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 2520, 249 )
custom_fonts/font = ExtResource( 1 )
text = "You start counting...


... How far can you go ?"
align = 1
valign = 1

[node name="Start" type="Button" parent="Intro"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -440.0
margin_right = 360.0
margin_bottom = -360.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 7 )
text = "Start"
flat = true

[node name="MainView" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimeElapsed" type="Label" parent="MainView"]
margin_right = 100.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 7 )

[node name="Alpha" type="Control" parent="MainView"]
anchor_top = 0.156
anchor_right = 1.0
anchor_bottom = 0.859
margin_top = 0.319992
margin_bottom = 0.47998
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AlphaPB" type="ProgressBar" parent="MainView/Alpha"]
anchor_top = -0.167
anchor_right = 1.0
anchor_bottom = -0.04
margin_top = 0.300003
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 1.0
step = 0.001
percent_visible = false

[node name="NumberDisplay" type="Button" parent="MainView/Alpha/AlphaPB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "0   "
flat = true
align = 2

[node name="NumberPerSecond" type="Label" parent="MainView/Alpha/AlphaPB/NumberDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -430.0
rect_min_size = Vector2( 250, 110 )
custom_fonts/font = ExtResource( 1 )
valign = 2

[node name="AlphaShop" type="VBoxContainer" parent="MainView/Alpha"]
anchor_right = 1.0
anchor_bottom = 0.8
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Counter1" type="ProgressBar" parent="MainView/Alpha/AlphaShop"]
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 10 )
max_value = 10.0
step = 1.0
allow_greater = true
percent_visible = false

[node name="BuyBtn" type="Button" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "1st Counter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmountLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Multiplier" type="Label" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerCentPerSecond" type="Label" parent="MainView/Alpha/AlphaShop/Counter1"]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 65.0
margin_right = 100.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Counter2" type="ProgressBar" parent="MainView/Alpha/AlphaShop"]
margin_top = 104.0
margin_right = 720.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 11 )
max_value = 10.0
step = 1.0
allow_greater = true
percent_visible = false

[node name="BuyBtn" type="Button" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "2nd Counter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmountLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 60 )
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Multiplier" type="Label" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerCentPerSecond" type="Label" parent="MainView/Alpha/AlphaShop/Counter2"]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 65.0
margin_right = 100.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Counter3" type="ProgressBar" parent="MainView/Alpha/AlphaShop"]
margin_top = 208.0
margin_right = 720.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 10 )
max_value = 10.0
step = 1.0
allow_greater = true
percent_visible = false

[node name="BuyBtn" type="Button" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "3rd Counter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmountLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 60 )
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Multiplier" type="Label" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerCentPerSecond" type="Label" parent="MainView/Alpha/AlphaShop/Counter3"]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 65.0
margin_right = 100.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Counter4" type="ProgressBar" parent="MainView/Alpha/AlphaShop"]
margin_top = 312.0
margin_right = 720.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 10 )
max_value = 10.0
step = 1.0
allow_greater = true
percent_visible = false

[node name="BuyBtn" type="Button" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "4th Counter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmountLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLbl" type="Label" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 60 )
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Multiplier" type="Label" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerCentPerSecond" type="Label" parent="MainView/Alpha/AlphaShop/Counter4"]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 65.0
margin_right = 100.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Spacer" type="ColorRect" parent="MainView/Alpha/AlphaShop"]
margin_top = 416.0
margin_right = 720.0
margin_bottom = 416.0
size_flags_vertical = 2

[node name="PhiSacrifice" type="Button" parent="MainView/Alpha/AlphaShop"]
margin_top = 640.0
margin_right = 720.0
margin_bottom = 720.0
rect_min_size = Vector2( 400, 80 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 12 )
text = "Sacrifice for 0 φ"
flat = true

[node name="PhiShop" type="VBoxContainer" parent="MainView/Alpha"]
visible = false
anchor_right = 1.0
margin_bottom = 43.0

[node name="NotUsed" type="Button" parent="MainView/Alpha/PhiShop"]
margin_right = 720.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Not Used"

[node name="AlphaPhiButtons" type="HBoxContainer" parent="MainView/Alpha"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -310.0
margin_top = -75.0
margin_right = 310.0
alignment = 1

[node name="AlphaShopBtn" type="Button" parent="MainView/Alpha/AlphaPhiButtons"]
margin_right = 308.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 75 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 5 )
text = "α shop"
flat = true

[node name="PhiShopBtn" type="Button" parent="MainView/Alpha/AlphaPhiButtons"]
margin_left = 312.0
margin_right = 620.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 75 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 5 )
text = "φ shop"
flat = true

[node name="BottomBar" type="HBoxContainer" parent="MainView"]
anchor_left = 0.014
anchor_top = 0.906
anchor_right = 0.986
anchor_bottom = 0.992
margin_left = -0.0799999
margin_top = 0.319946
margin_right = 0.0799561
margin_bottom = 0.23999
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3

[node name="PreInfinity" type="Button" parent="MainView/BottomBar"]
margin_right = 136.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "α"
flat = true

[node name="Aleph" type="Button" parent="MainView/BottomBar"]
margin_left = 140.0
margin_right = 277.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "ℵ "
flat = true

[node name="Beth" type="Button" parent="MainView/BottomBar"]
margin_left = 281.0
margin_right = 418.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "ℶ"
flat = true

[node name="Gimel" type="Button" parent="MainView/BottomBar"]
margin_left = 422.0
margin_right = 559.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "ℷ "
flat = true

[node name="Dalet" type="Button" parent="MainView/BottomBar"]
margin_left = 563.0
margin_right = 700.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "ℸ "
flat = true

[connection signal="game_started" from="." to="Game" method="_on_UI_game_started"]
[connection signal="button_update" from="Game" to="." method="_on_Game_button_update"]
[connection signal="milestone_passed" from="Game" to="." method="_on_Game_milestone_passed"]
[connection signal="number_changed" from="Game" to="." method="_on_Game_number_changed"]
[connection signal="time_passed" from="Game" to="." method="_on_Game_time_passed"]
[connection signal="update_PB" from="Game" to="." method="_on_Game_update_PB"]
[connection signal="update_sacrifice_alpha_btn" from="Game" to="." method="_on_Game_update_sacrifice_alpha_btn"]
[connection signal="pressed" from="Intro/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainView/Alpha/AlphaPB/NumberDisplay" to="Game" method="_on_Number_pressed"]
[connection signal="pressed" from="MainView/Alpha/AlphaShop/Counter1/BuyBtn" to="Game" method="_on_BuyBtn_pressed" binds= [ "Counter1" ]]
[connection signal="pressed" from="MainView/Alpha/AlphaShop/Counter2/BuyBtn" to="Game" method="_on_BuyBtn_pressed" binds= [ "Counter2" ]]
[connection signal="pressed" from="MainView/Alpha/AlphaShop/Counter3/BuyBtn" to="Game" method="_on_BuyBtn_pressed" binds= [ "Counter3" ]]
[connection signal="pressed" from="MainView/Alpha/AlphaShop/Counter4/BuyBtn" to="Game" method="_on_BuyBtn_pressed" binds= [ "Counter4" ]]
[connection signal="pressed" from="MainView/Alpha/AlphaShop/PhiSacrifice" to="Game" method="_on_PhiSacrifice_pressed"]
[connection signal="pressed" from="MainView/Alpha/AlphaPhiButtons/AlphaShopBtn" to="." method="_on_AlphaShopBtn_pressed"]
[connection signal="pressed" from="MainView/Alpha/AlphaPhiButtons/PhiShopBtn" to="." method="_on_PhiShopBtn_pressed"]
